--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NextStepAdmission - Educational Consultancy & Career Guidance</title>
-    <meta name="description" content="Expert educational consultancy services for career counseling, study abroad guidance, college admissions, and visa assistance. Your trusted partner in achieving educational excellence." />
+    <meta name="description" content="Expert educational consultancy services for career counseling, study abroad guidance, college admissions, and visa assistance." />
     <meta name="author" content="NextStepAdmission" />
 
     <meta property="og:title" content="NextStepAdmission - Educational Consultancy & Career Guidance" />
@@ -16,6 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@nextstepadmission" />
     <meta name="twitter:image" content="" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpg"/>
   </head>
 
   <body>
